[package]
name = "faangos"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
stdweb = "0.4"
log = "0.4"
fern = "0.6"
screeps-game-api = {path = "./screeps-game-api"}
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
